tests/fixtures/rules/require-dot-notation/bad/trailing-underscore.js
let a = b['camelCased_'];
